boost python cmake: require boost < 1.65

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -21,6 +21,13 @@ if (NOT Boost_FOUND)
     Please install it (e.g. sudo apt-get install libboost-python-dev).
   ")
 endif()
+# boost python 1.65.0 replaced the booost::python::numeric API with boost::python::numpy, hence we require version < 1.65.0
+if(${Boost_MINOR_VERSION} GREATER_EQUAL 65)
+  message(FATAL_ERROR "
+    Found incompatible Boost.Python version ${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION}
+    Version older than 1.65.0 is required.
+  ")
+endif()
 target_link_libraries(cloudphxx ${Boost_LIBRARIES})
 
 # requireing Blitz++
