--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -1,9 +1,10 @@
 #TODO: search pytest?
 #TODO: local search path for python modules (to make it work before make install)
 
-find_package(PythonLibs 2.7)
+# find_interp first, find_libs should find a matching version of libs
+find_package(PythonInterp 2.7 REQUIRED)
+find_package(PythonLibs)
 
-find_package(PythonInterp REQUIRED)
 
 if (NOT PYTHON_VERSION_STRING VERSION_EQUAL PYTHONLIBS_VERSION_STRING)
   message(STATUS "PYTHON_EXECUTABLE: " ${PYTHON_EXECUTABLE})
