travis: default osx boost should work after all?

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -14,7 +14,7 @@ target_include_directories(cloudphxx PUBLIC ${PYTHON_INCLUDE_DIRS})
 target_link_libraries(cloudphxx ${PYTHON_LIBRARIES})
 
 # informing the Python bindings where to find Boost.Python 
-find_package(Boost COMPONENTS python QUIET)
+find_package(Boost COMPONENTS python)
 if (NOT Boost_FOUND)
   message(FATAL_ERROR "
     Boost.Python not found. 
