--- a/.travis.yml
+++ b/.travis.yml
@@ -95,6 +95,7 @@ install:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip2 install http://prdownloads.sourceforge.net/gnuplot-py/gnuplot-py-1.8.tar.gz?download; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip2 install -U matplotlib; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip2 install -U pytest; fi
+    # issue with osx on travis + set -e  https://github.com/travis-ci/travis-ci/issues/6307 
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then command curl -sSL https://rvm.io/mpapis.asc | gpg --import - ; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then rvm get stable; fi
 
