will this force to compare only the major and minor versions (and not the patch)?

--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(PythonInterp 2.7 REQUIRED)
 find_package(PythonLibs)
 
 
-if (NOT PYTHON_VERSION_STRING VERSION_EQUAL PYTHONLIBS_VERSION_STRING)
+if (NOT PYTHON_VERSION VERSION_EQUAL PYTHONLIBS_VERSION)
   message(STATUS "PYTHON_EXECUTABLE: " ${PYTHON_EXECUTABLE})
   message(STATUS "PYTHON_VERSION: " ${PYTHON_VERSION_STRING})
   message(STATUS "PYTHON_LIBRARIES: " ${PYTHON_LIBRARIES})
