--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,8 @@ before_install:
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export PATH=$(echo $PATH | tr ':' "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s|::|:|g"); fi
 # find python paths, taken from 
 # https://github.com/breannansmith/scisim/blob/master/.travis.yml
-    - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export PY_INC=`python-config --includes | grep -o '\-I[^ ]*' | head -n 1 | cut -c 3-` ; fi
-    - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export PY_LIB=`python-config --ldflags | grep -o '\-L[^ ]*' | head -n 1 | cut -c 3- | xargs -I % find % -name libpython*.dylib` ; fi
+#    - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export PY_INC=`python-config --includes | grep -o '\-I[^ ]*' | head -n 1 | cut -c 3-` ; fi
+#    - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export PY_LIB=`python-config --ldflags | grep -o '\-L[^ ]*' | head -n 1 | cut -c 3- | xargs -I % find % -name libpython*.dylib` ; fi
 
 
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo add-apt-repository "deb http://us.archive.ubuntu.com/ubuntu/ trusty main universe multiverse restricted"; fi
