--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,8 @@ before_install:
     - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export PY_INC=`python-config --includes | grep -o '\-I[^ ]*' | head -n 1 | cut -c 3-` ; fi
     - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export PY_LIB=`python-config --ldflags | grep -o '\-L[^ ]*' | head -n 1 | cut -c 3- | xargs -I % find % -name libpython*.dylib` ; fi
 
+    - if [[ $TRAVIS_OS_NAME == "osx" ]]; then echo $PY_INC; fi
+    - if [[ $TRAVIS_OS_NAME == "osx" ]]; then echo $PY_LIB; fi
 
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo add-apt-repository "deb http://us.archive.ubuntu.com/ubuntu/ trusty main universe multiverse restricted"; fi
 #    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo add-apt-repository -y "ppa:ubuntu-toolchain-r/test" ; fi
