[travis] switch off other builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,18 @@ dist: trusty
 sudo: required
 
 os: 
-    - linux
+#    - linux
     - osx
 osx_image: xcode8
 compiler:
     - gcc
     - clang
 env:
-    - TEST_SUITE=cuda
-    - TEST_SUITE=tests
-    - TEST_SUITE=parcel
+  #    - TEST_SUITE=cuda
+  #    - TEST_SUITE=tests
+  #    - TEST_SUITE=parcel
     - TEST_SUITE=icicle
-    - TEST_SUITE=UWLCM
+      #    - TEST_SUITE=UWLCM
 matrix:
     exclude:
         - os: osx
