--- a/.travis.yml
+++ b/.travis.yml
@@ -107,8 +107,9 @@ install:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install blitz boost-python; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install gnuplot; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip2 install --trusted-host http://prdownloads.sourceforge.net/gnuplot-py/gnuplot-py-1.8.tar.gz?download; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip2 install -U matplotlib; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip2 install -U pytest; fi
+      # https://github.com/pypa/pip/issues/3165
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip2 install -U matplotlib --ignore-installed six; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip2 install -U pytest --ignore-installed six; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then command curl -sSL https://rvm.io/mpapis.asc | gpg --import - ; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then rvm get stable; fi
 
