testing libcloudphxx_LIBRARY_DIR instead of libcloudphxx_LIBRARIES for cmake

--- a/models/kinematic_2D/src/CMakeLists.txt
+++ b/models/kinematic_2D/src/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(icicle icicle.cpp)
 target_link_libraries(icicle ${libmpdataxx_LIBRARIES})
 target_include_directories(icicle PUBLIC ${libmpdataxx_INCLUDE_DIRS})
 
+#link_directories(${libcloudphxx_LIBRARY_DIR})
+#target_link_libraries(icicle libcloudphxx_lgrngn)
 target_link_libraries(icicle ${libcloudphxx_LIBRARIES})
 
 find_package(Boost COMPONENTS program_options REQUIRED)
