--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ if (NOT CUDA_FOUND)
   ")
 endif()
 
-set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work
+set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work, TODO: actually now it would
 
 if (CUDA_FOUND)
   # trying to figure out compute capability of the current 
@@ -96,17 +96,22 @@ if (CUDA_FOUND)
   endif()
   file(WRITE "${tmpdir}/test.cu" "
     #include <iostream>
-
+    
     int main() 
     {
-      cudaDeviceProp prop; 
-      cudaError_t err = cudaGetDeviceProperties(&prop, 0); 
-      if (err == cudaSuccess)
-        std::cout << prop.major << prop.minor;
-      else
+      int DeviceCount;
+      cudaGetDeviceCount(&DeviceCount);
+      for(int i = 0 ; i < DeviceCount; ++i)
       {
-        std::cerr << cudaGetErrorString(err);
-        std::cout << \"?\";
+        cudaDeviceProp prop; 
+        cudaError_t err = cudaGetDeviceProperties(&prop, i); 
+        if (err == cudaSuccess)
+          std::cout << prop.major << prop.minor << \" \" ;
+        else
+        {   
+          std::cerr << cudaGetErrorString(err);
+          std::cout << \"?\";
+        }   
       }
     }
   ")
@@ -118,16 +123,23 @@ if (CUDA_FOUND)
   if (NOT status EQUAL 0)
     message(FATAL_ERROR "${pfx}: test program failed")
   endif()
-  message(STATUS "CUDA capability: ${msg}")
-  if (msg STREQUAL "?")
-    set (msg "20")
-    message(STATUS "CUDA capability check failed, assuming a default of ${msg}")
-  endif()
-  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} --gpu-code=sm_${msg} --std=c++11")
-  if (msg EQUAL "21") # see https://devtalk.nvidia.com/default/topic/606195/-solved-nvcc-fatal-unsupported-gpu-architecture-compute_21-/
-    set(msg "20")
-  endif()
-  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} --gpu-architecture=compute_${msg}")
+  separate_arguments(msg)
+  list(REMOVE_DUPLICATES msg)
+  foreach(code ${msg})
+    message(STATUS "CUDA capability: ${code}")
+    if (code STREQUAL "?")
+      set (code "20")
+      message(STATUS "CUDA capability check failed, assuming a default of ${code}")
+    endif()
+    set(arch ${code})
+    if (arch EQUAL "21") # see https://devtalk.nvidia.com/default/topic/606195/-solved-nvcc-fatal-unsupported-gpu-architecture-compute_21-/
+      set(arch "20")
+    endif()
+    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} --generate-code arch=compute_${arch},code=sm_${code}")
+  endforeach(code)
+
+  # enabling c++11
+  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++11")
   unset(pfx)
   unset(tmpdir)
   unset(msg)
