--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ before_install:
 
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get update; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew update; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then unlink python; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew unlink python; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install python@2; fi
 
 # first find brew python python-config
