always build git_revision

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -269,7 +269,7 @@ unset(status)
 
 # generate a header file with git revision id
 if (EXISTS "${CMAKE_SOURCE_DIR}/.git")
-  add_custom_target(git_revision.h
+  add_custom_target(git_revision.h ALL
    git log -1 "--format=format:#define LIBCLOUDPHXX_GIT_REVISION \"%H\"%n" HEAD > include/libcloudph++/git_revision.h
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} VERBATIM
   )
