--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -14,7 +14,11 @@ target_include_directories(cloudphxx PUBLIC ${PYTHON_INCLUDE_DIRS})
 target_link_libraries(cloudphxx ${PYTHON_LIBRARIES})
 
 # informing the Python bindings where to find Boost.Python 
-find_package(Boost COMPONENTS python27)
+if(${Boost_MINOR_VERSION} LESS 65)
+  find_package(Boost COMPONENTS python)
+else()
+  find_package(Boost COMPONENTS python27)
+endif()
 if (NOT Boost_FOUND)
   message(FATAL_ERROR "
     Boost.Python not found. 
@@ -27,7 +31,11 @@ target_link_libraries(cloudphxx ${Boost_LIBRARIES})
 if(${Boost_MINOR_VERSION} LESS 65)
   target_compile_options(cloudphxx PRIVATE -DBPNUMERIC)
 else()
-  find_package(Boost COMPONENTS numpy REQUIRED)
+  if(${Boost_MINOR_VERSION} LESS 67)
+    find_package(Boost COMPONENTS numpy REQUIRED)
+  else()
+    find_package(Boost COMPONENTS numpy27 REQUIRED)
+  endif()
   target_link_libraries(cloudphxx ${Boost_LIBRARIES})
   target_compile_options(cloudphxx PRIVATE  -DBPNUMPY)
 endif()
