reenable all tests on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,17 @@ dist: trusty
 sudo: required
 
 os: 
-#    - linux
+    - linux
     - osx
 compiler:
     - gcc
     - clang
 env:
-#    - TEST_SUITE=cuda
+    - TEST_SUITE=cuda
     - TEST_SUITE=tests
-#    - TEST_SUITE=parcel
-#    - TEST_SUITE=icicle
-#    - TEST_SUITE=UWLCM
+    - TEST_SUITE=parcel
+    - TEST_SUITE=icicle
+    - TEST_SUITE=UWLCM
 matrix:
     exclude:
         - os: osx
