take into account library postfix when searching for repository libcloudph

--- a/models/kinematic_2D/CMakeLists.txt
+++ b/models/kinematic_2D/CMakeLists.txt
@@ -3,7 +3,13 @@ project(icicle CXX C)
 enable_testing()
 
 # search for a local version of libcloudphxx
-find_library(libcloudphxx_LIBRARIES cloudphxx_lgrngn ${CMAKE_SOURCE_DIR}/../../build/src NO_DEFAULT_PATH)
+set(libcloud_postfix "")
+if(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+set(libcloud_postfix "_relwithdbg")
+elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
+set(libcloud_postfix "_dbg")
+endif()
+find_library(libcloudphxx_LIBRARIES cloudphxx_lgrngn${libcloud_postfix} ${CMAKE_SOURCE_DIR}/../../build/src NO_DEFAULT_PATH)
 if (libcloudphxx_LIBRARIES)
   message("icicle will use libclouphxx++ from current repository")
   include_directories(PUBLIC ${CMAKE_SOURCE_DIR}/../../include)
