--- a/models/kinematic_2D/CMakeLists.txt
+++ b/models/kinematic_2D/CMakeLists.txt
@@ -3,12 +3,13 @@ project(icicle CXX C)
 enable_testing()
 
 # search for a local version of libcloudphxx
+unset(libcloudphxx_LIBRARIES CACHE)
 find_library(libcloudphxx_LIBRARIES cloudphxx_lgrngn ${CMAKE_SOURCE_DIR}/../../build/src NO_DEFAULT_PATH)
 if (libcloudphxx_LIBRARIES)
-  message("icicle will use libclouphxx++ from current repository")
+  message(STATUS "icicle will use libclouphxx++ from current repository")
   include_directories(PUBLIC ${CMAKE_SOURCE_DIR}/../../include)
 else()
-  message("libcloudphxx++ not found in current repository, icicle will use an installed version")
+  message(STATUS "libcloudphxx++ not found in current repository, icicle will use an installed version")
 endif()
 
 # if no local version found, look for an installed one
